Documents/MetaDataIO/MetadataIO-distr-33.0.3-bin/repos/src/objects/LiveChatTranscript.object
<CustomObject>
    <fields>
        <fullName>How_likely_are_you_to_use_Chat_again__c</fullName>
        <label>How likely are you to use Chat again?</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>How_would_you_rate_the_service__c</fullName>
        <label>How would you rate the service?</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Would_you_suggest_our_products_services__c</fullName>
        <label>Would you suggest our products/services?</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <sharingModel>Private</sharingModel>
</CustomObject>